[gd_scene load_steps=4 format=3 uid="uid://bvk0crgtytdv1"]

[ext_resource type="Script" uid="uid://b3cknt44j16up" path="res://Engine/Resources/Singletons/Debug.gd" id="1_c7rdp"]
[ext_resource type="Script" uid="uid://cb8f3tuk3mw0f" path="res://Engine/Resources/UtilityNode/CommandLine.gd" id="3_qqgcm"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_xj2h2"]
number_color = Color(0.482353, 0.737255, 0.662745, 1)
symbol_color = Color(0.670588, 0.788235, 1, 1)
function_color = Color(0.262745, 0.505882, 0.713726, 1)
member_variable_color = Color(0.533333, 0.635294, 0.72549, 1)
keyword_colors = {
"PI": Color(0.94902, 0.423529, 0.501961, 1)
}
color_regions = {
"\" \"": Color(1, 0.929412, 0.631373, 1)
}

[node name="Debug" type="CanvasLayer"]
process_mode = 3
layer = 99
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)
script = ExtResource("1_c7rdp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DebugLabelLeft" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
bbcode_enabled = true
text = "[url={\"dest\": \"_objects%5B0%5D\"}]<Object#-495783754>[/url]"
fit_content = true

[node name="DebugLabelRight" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
bbcode_enabled = true
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.25
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 2

[node name="CommandLineFeedback" type="RichTextLabel" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="CommandLine" type="CodeEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
placeholder_text = "Enter a command..."
context_menu_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true
syntax_highlighter = SubResource("CodeHighlighter_xj2h2")
code_completion_enabled = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("3_qqgcm")

[connection signal="meta_clicked" from="HBoxContainer/DebugLabelLeft" to="." method="_on_left_meta_clicked"]
[connection signal="meta_clicked" from="HBoxContainer/DebugLabelRight" to="." method="_on_right_meta_clicked"]
